# string

./: CMakeLists.txt  main.c
string/: string_.c  string_.h
string/tasks/task10_reverse_string/: reverse_string.c  reverse_string.h
string/tasks/task11_before_first_a/: task11.c  task11.h
string/tasks/task17_delete_palindromes/: delete_palindromes.c  delete_palindromes.h
string/tasks/task1_delete_spaces/: delete_spaces.c  delete_spaces.h
string/tasks/task2_remove_extra_spaces/: remove_extra_spaces.c  remove_extra_spaces.h
string/tasks/task3_reverse_digit_to_start/: reverse_digit_to_start.c  reverse_digit_to_start.h
string/tasks/task4_replace_numbers_with_spaces/: replace_numbers_with_spaces.c  replace_numbers_with_spaces.h
string/tasks/task5_replace_words/: replace_words.c  replace_words.h
string/tasks/task6_is_ordered_words/: is_ordered_words.c  is_ordered_words.h
string/tasks/task7_bag_of_words/: bag_of_words.c  bag_of_words.h
string/tasks/task8_amount_palindromes/: amount_palindromes.c  amount_palindromes.h
string/tasks/task9_merge_strings/: merge_strings.c  merge_strings.h
